Fix alignment of checkbox on registration form

--- a/css/dashboard.sass
+++ b/css/dashboard.sass
@@ -2,7 +2,7 @@
   background-color: #eeeeee
   font-family     : "Open Sans Source Pro", "Helvetica", "Arial", sans-serif
   height          : 100%
-  padding         : 15px
+  padding         : 10.313em
 
   & .btn
     background-color: #000
@@ -11,7 +11,7 @@
       background-color: inherit
 
   &.navbar-fixed-top
-    height: 50px
+    height: 3.125em
 
   & .navbar,
   & .navbar-default.navbar-fixed-top,
@@ -22,7 +22,7 @@
     box-sizing: border-box
 
   & .panel-body
-    padding: 15px
+    padding: 10.313em
 
   .navbar-brand
     color: #ccc
@@ -30,7 +30,7 @@
       color: lighten($panel-blue-color, 25%)
 
     & > i
-      margin-right: 15px
+      margin-right: 10.313em
 
   .navbar-fixed-top
     margin-bottom: 0
@@ -50,7 +50,7 @@
     box-sizing: border-box
 
     & > form
-      margin : 5px
+      margin : 0.313em
       padding: 0
 
     &:hover
@@ -147,7 +147,7 @@
         color: $panel-yellow-color
 
 li.quick-add-form
-  padding: 5px
+  padding: 0.313em
 
 @import "./partials/_dashboard-top-nav-links"
 @import "./partials/_dashboard-home-view"
