--- a/css/partials/_registration-form.sass
+++ b/css/partials/_registration-form.sass
@@ -1,60 +1,52 @@
 #registration-form
-  margin-bottom: 15px
-  padding      : 20px
+  margin-bottom: 0.938em
 
   .half-width
     width  : 46%
     display: inline-block
 
     &.left
-      margin-right: 3px
+      margin-right: 0.188em
 
     &.right 
-      margin-left: 3px
+      margin-left: 0.188em
 
   & > fieldset
     display: block
     border : 0
     padding: 0
-    margin : 15px 10px 0 0
+    margin : 0.938em 0.625em 0 0
 
     & button
       box-sizing: border-box
-      margin    : auto 5px
+      margin    : auto 0.313em
       font-size : inherit
 
     & input
-      margin-top   : 5px
-      margin-bottom: 5px
+      margin-top   : 0.313em
+      margin-bottom: 0.313em
 
       &:not(.half-width)
+        margin-right: auto
+        margin-left : auto
+        position    : inherit
+
+      &:not(.half-width):not(.checkbox)
         position    : relative
         width       : 93%
-        margin-left : auto
-        margin-right: auto
 
     &.has-error
       & input.checkbox,
       & label > input.checkbox
         color: #a94442
 
-  & div.terms
-    font-weight   : normal
-    display       : block
-    text-align    : left
-    vertical-align: center
-    margin        : 15px 10px 10px 6px 
+  & fieldset.terms
+    text-align: left
 
-    & input[type="checkbox"]
-      position      : relative
-      vertical-align: center
-      margin        : 0 10px 0 0
-      top           : 1px
-      float         : left
-
-    & label
-      padding-left: 5px
-      font-weight : normal
+    & input.checkbox
+      float      : left
+      margin-left: 0.938em
+      margin-top : 0
 
     &.has-error
-      border : 1px solid #a94442
+      border : 0.063em solid #a94442
